# pokimate-prototype

./: .cursorrules  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/desktop/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/desktop/src/: globals.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/examples/: hash_passwords.rs
apps/desktop/src-tauri/resources/: README.md  base.db
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: auth_commands.rs  bank_import_commands.rs  dashboard_commands.rs  finance_commands.rs  goals_commands.rs  habits_commands.rs  investment_commands.rs  log_commands.rs  mod.rs  settings_commands.rs  time_commands.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/models/: mod.rs
apps/desktop/src/app/: layout.tsx  page.tsx  providers.tsx
apps/desktop/src/hooks/: useBudgets.ts  useCategories.ts  useDashboard.ts  useDebts.ts  useFinanceAccounts.ts  useGoals.ts  useHabits.ts  useInvestments.ts  useSubscriptions.ts  useTime.ts  useTransactions.ts
apps/desktop/src/lib/: tauri.ts
apps/desktop/src/store/: auth.ts
apps/mobile/: README.md  app.json  eas.json  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/(auth)/: login.tsx
apps/mobile/app/(tabs)/: _layout.tsx  finance.tsx  goals.tsx  habits.tsx  index.tsx  settings.tsx
apps/mobile/src/: theme.ts
apps/mobile/src/db/: index.ts  schema.ts
(+45 files in other folders)
